fixed style and alignment issues

--- a/src/main/resources/static/css/newstyle.css
+++ b/src/main/resources/static/css/newstyle.css
@@ -13,6 +13,10 @@ body{
     margin:0;
 }
 
+td,th{
+    color:white;
+}
+
 .buttonColor{
     background-color:#59A5D8;
     color:white;
@@ -30,10 +34,13 @@ body{
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Corben', Georgia, Times, serif;
+    text-shadow: 1px 1px 1px #ccc;
+
 }
-p, div {
+p, div,td, th {
     font-family: 'Nobile', Helvetica, Arial, sans-serif;
 }
+
 
 
 .seat{
@@ -99,4 +106,22 @@ p, div {
     margin:15px 0;
 }
 
+.card{
+    margin-right:2em;
+}
 
+.card:hover{
+    background-color:#EBF2FA;
+}
+
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 30%;
+    -ms-transform: translateY(-30%);
+    transform: translateY(-30%);
+}
+
+.bookContainer{
+    height:100vh;
+}
